--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "joi": "^17.9.2",
     "mysql2": "^3.3.3",
-    "sequelize": "^6.31.1"
+    "sequelize": "^6.31.1",
+    "validator": "^13.9.0"
   }
 }
