--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
   },
   "homepage": "https://github.com/Bhakti12/NodeJs#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.1.4",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.3.3",
     "sequelize": "^6.31.1",
     "validator": "^13.9.0"
